# Loosh

./: .gitignore  Makefile  README.md  defs.hh  lang.cc  lang.hh  lisp.cc  lisp.hh  node.cc  node.hh  node_clone.cc  node_error.cc  node_map.cc  node_math.cc  node_out.cc  node_str.cc  scope_logger.cc  scope_logger.hh  tree.cc  tree.hh
ai/: gc.cc
test_cc/: CMakeLists.txt  Makefile  Makefile_test  main.cc  scope_logger.hh  test_node_1.cc  test_node_2.cc
test_lisp/: array_1.lisp  class_1.lisp  class_6.lisp  fib_2.lisp  fib_3.lisp  loop_2.lisp  match_1.lisp  match_2.lisp  module3.lisp  range_1.lisp  re_2.lisp  ws_1.lisp  ws_2.lisp
